modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/max-revision-history-limit/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8RevisionHistoryLimit
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    limit: 3
