modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/max-revision-history-limit/rendered/test_samples/other/001-example-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: apps/v1
kind: Deployment
metadata:
    name: allowed
    namespace: default
spec:
    revisionHistoryLimit: 3
    selector:
        matchLabels:
            app: demo
    template:
        metadata:
            labels:
                app: demo
        spec:
            containers:
                - image: nginx
                  name: nginx
