modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/operation/max-revision-history-limit/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-revision-history-limit
tests:
  - name: d8-revision-history-limit
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: example-allowed
        object: test_samples/other/001-example-allowed.yaml
        assertions:
          - violations: "no"
      - name: example-disallowed
        object: test_samples/other/002-example-disallowed.yaml
        assertions:
          - message: 'Deployment <disallowed> has .spec.revisionHistoryLimit: 10, required: 3'
            violations: "yes"
